--- a/compose.yml
+++ b/compose.yml
@@ -7,12 +7,15 @@ services:
       - ./api:/app
       - /app/node_modules
     ports:
-      - "3000:3000"
+      - "3001:3000"
       - "9229:9229"
     depends_on:
       - postgres
     env_file:
       - api/.env
+    networks:
+      - backend
+      - frontend
     command: yarn start:debug
   postgres:
     image: postgres:14.3-alpine
@@ -21,6 +24,25 @@ services:
       - POSTGRES_USER=postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - backend
+  web:
+    build: 
+      context: ./web
+      target: dev
+    volumes:
+      - ./web:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    networks:
+      - frontend
+    depends_on:
+      - api
 
 volumes:
   postgres-data:
+
+networks:
+  backend:
+  frontend:
