--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^4.2.11",
     "@mantine/hooks": "^4.2.11",
+    "@mantine/modals": "^4.2.12",
     "@mantine/next": "^4.2.11",
     "axios": "^0.27.2",
     "next": "12.2.0",
