--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@mantine/modals": "^4.2.12",
     "@mantine/next": "^4.2.11",
     "axios": "^0.27.2",
+    "framer-motion": "^6.4.3",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
