--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.1",
+    "tabler-icons-react": "^1.52.0",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
