--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^4.2.11",
+    "@mantine/form": "^4.2.12",
     "@mantine/hooks": "^4.2.11",
     "@mantine/modals": "^4.2.12",
     "@mantine/next": "^4.2.11",
@@ -20,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.1",
     "tabler-icons-react": "^1.52.0",
+    "zod": "^3.17.3",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
