--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@mantine/modals": "^4.2.12",
     "@mantine/next": "^4.2.11",
     "axios": "^0.27.2",
+    "cookies-next": "^2.1.1",
     "framer-motion": "^6.4.3",
     "next": "12.2.0",
     "react": "18.2.0",
