--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-query": "^3.39.1",
     "tabler-icons-react": "^1.52.0",
     "zod": "^3.17.3",
