--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@liaoliaots/nestjs-redis": "^8.2.2",
     "@mikro-orm/core": "^5.2.0",
     "@mikro-orm/nestjs": "^5.0.2",
     "@mikro-orm/postgresql": "^5.2.0",
@@ -36,6 +37,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "ioredis": "^5.2.0",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
