--- a/compose.yml
+++ b/compose.yml
@@ -22,6 +22,9 @@ services:
       - POSTGRES_USER=postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  redis:
+    image: redis:7.0.2-alpine
+
 
 volumes:
   postgres-data:
