--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^6.4.3",
     "next": "12.2.0",
     "react": "18.2.0",
+    "react-code-input": "^3.10.1",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-query": "^3.39.1",
