--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "helmet": "^5.1.1",
     "ioredis": "^5.2.0",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
@@ -53,6 +54,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.4",
