--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^4.2.11",
-    "@mantine/form": "^4.2.12",
-    "@mantine/hooks": "^4.2.11",
-    "@mantine/modals": "^4.2.12",
-    "@mantine/next": "^4.2.11",
+    "@mantine/core": "4.2.11",
+    "@mantine/dates": "4.2.11",
+    "@mantine/form": "4.2.11",
+    "@mantine/hooks": "4.2.11",
+    "@mantine/modals": "4.2.11",
+    "@mantine/next": "4.2.11",
     "axios": "^0.27.2",
     "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.4",
     "framer-motion": "^6.4.3",
     "next": "12.2.0",
     "react": "18.2.0",
