--- a/compose.yml
+++ b/compose.yml
@@ -13,15 +13,23 @@ services:
       - "9229:9229"
     depends_on:
       - postgres
-    env_file:
-      - api/.env
+    environment:
+      - NODE_ENV=development
+      - DB_HOST=postgres
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=postgres
+      - REDIS_HOST=redis
+      - JWT_ACCESS_SECRET=hfdhsfjhdjhfjdsfjhdhfhdjhfjdjhfjdh
+      - JWT_REFRESH_SECRET=djfhjhdjhjdhsfjjdhfjhdsjhfjhdjfhjdh
   postgres:
     image: postgres:14.3-alpine
-    environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
   redis:
     image: redis:7.0.2-alpine
 
