--- a/compose.yml
+++ b/compose.yml
@@ -22,6 +22,7 @@ services:
       - REDIS_HOST=redis
       - JWT_ACCESS_SECRET=hfdhsfjhdjhfjdsfjhdhfhdjhfjdjhfjdh
       - JWT_REFRESH_SECRET=djfhjhdjhjdhsfjjdhfjhdsjhfjhdjfhjdh
+    command: ["yarn", "start:debug"]
   postgres:
     image: postgres:14.3-alpine
     volumes:
