--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/throttler": "^3.0.0",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
@@ -54,6 +55,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jest": "27.4.1",
