--- a/api/package.json
+++ b/api/package.json
@@ -22,9 +22,10 @@
   },
   "dependencies": {
     "@liaoliaots/nestjs-redis": "^8.2.2",
-    "@mikro-orm/core": "^5.2.0",
-    "@mikro-orm/nestjs": "^5.0.2",
-    "@mikro-orm/postgresql": "^5.2.0",
+    "@mikro-orm/cli": "^5.3.1",
+    "@mikro-orm/core": "^5.3.1",
+    "@mikro-orm/nestjs": "^5.1.1",
+    "@mikro-orm/postgresql": "^5.3.1",
     "@nestjs-modules/mailer": "^1.7.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
@@ -50,6 +51,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@mikro-orm/migrations": "^5.3.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -94,5 +96,12 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/config/mikro-orm.provider.ts",
+      "./dist/config/mikro-orm.provider.js"
+    ]
   }
 }
