--- a/api/package.json
+++ b/api/package.json
@@ -51,7 +51,9 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@mikro-orm/migrations": "^5.3.1",
+    "@mikro-orm/seeder": "^5.3.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
